styles/temples.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: "Sansita", sans-serif;
}

/* mobile **************************/
header {
	background-color: steelblue;
	display: grid;
	grid-gap: 1rem;
	padding: 20px;
	border: 1px solid rgba(0, 0, 0, 0.1);
	box-shadow: 0 0 30px #333;
}

header,
main {
	margin: 0 auto;
}

h1 {
	font-size: 2rem;
}

nav {
	background-color: steelblue;
}

nav ul {
	list-style: none;
	display: flex;
	flex-direction: column;
}

nav a {
	display: block;
	color: #fff;
	text-align: center;
	padding: 1rem;
	text-decoration: none;
	font-size: larger;
}

nav a:hover {
	text-decoration: underline double;
	background-color: #eee;
	color: #000;
}

.active {
	color: yellow;
}

/* Larger Views ******************************/
@media (min-width: 740px) {
	header {
		display: flex;
		align-items: center;
		justify-content: space-between;
	}
	nav ul {
		justify-content: flex-end;
		flex-direction: row;
	}
	nav a {
		flex: 1 1 100%;
	}
}


footer {
    height: 100px;
    background-color: steelblue;
    max-width: 100vw;
    padding: 20px;

}

footer p {
    text-align: center;
    font-size: 20px;
    font-weight: 400;
    margin-bottom: 5px;

}

.highlight {
	color: yellow;
	font-weight: 700;
	font-family: hebrew;
}


/* from the codepen */


.stdlf {
	font-weight: 700;border-bottom: 1px solid #777; margin-bottom: 1rem;
}

body {font-family: Roboto, sans-serif;}
h2 {font-size: 2rem;}
h3 {font-size: 1.5rem; color: darkgreen;}
section {margin: 1rem auto; max-width: 960px; padding: .5rem;}
.container {display:grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); grid-gap: 25px;place-items: center;}

figure {background-color:#fff;}
img { width: 100%; height: auto; margin: .5rem;}
figcaption {font-size: smaller;}
/* hover effect */
.hover:hover {box-shadow: 0 0 50px #333;}
/* rounded corners - boxmodel */
.rocorn {border-radius: 15px 150px;}
/* simple opacity */




#menu {
	font-size: 1.5rem;
	border: 0;
	background: none;
	color: #000;
	position: absolute;
	top: 1rem;
	right: 1rem;
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "❌";
}

